rpi5/scrutiny/rpi5.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rpi5
  labels:
    app: rpi5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rpi5
  template:
    metadata:
      name: rpi5
      labels:
        app: rpi5
    spec:
      containers:
        - name: rpi5
          image: ghcr.io/analogj/scrutiny:v0.8.1-collector@sha256:5f6536d68be2d7424627647cdd658e6b4c1f69751a21622fb97b999a3155ba86
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /run/udev
              name: udev
            - mountPath: /dev/nvme0
              name: nvme0
      restartPolicy: Always
      volumes:
        - name: udev
          hostPath:
            path: /run/udev
        - name: nvme0
          hostPath:
            path: /dev/nvme0
      nodeSelector:
        kubernetes.io/hostname: rpi5
