rpi5/scrutiny/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrutiny
spec:
  selector:
    app: scrutiny
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
