rpi5/scrutiny/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: scrutiny
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.1.100
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`scrutiny.local`) || Host(`scrutiny.internal`)
      middlewares:
        - name: security-headers
          namespace: kube-system
      services:
        - name: scrutiny
          port: 80
  tls:
    secretName: scrutiny-cert-tls
    domains:
      - main: scrutiny.local
        sans:
          - scrutiny.internal
